fix: horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=DM+Sans:wght@400;500&family=Raleway:wght@300;400;500&display=swap');
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'DM Sans', sans-serif;
     background-color: #FAF7F5;
-    overflow-x: hidden;
-    overflow: hidden;
 }
 
 /* h1, h2, h3, h4 {
